--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -4,29 +4,40 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	id="WebApp_ID" version="3.0">
 	<display-name>Sopraturage</display-name>
+	
+	
 	<servlet>
-
 		<servlet-name>Init</servlet-name>
 		<servlet-class>sopraturage.view.Init</servlet-class>
-
 	</servlet>
-
+	
+	
 	<servlet-mapping>
 		<servlet-name>Init</servlet-name>
 		<url-pattern>/init</url-pattern>
 	</servlet-mapping>
-
-
-
-
+	
+	<servlet>
+		<servlet-name>Forgot</servlet-name>
+		<servlet-class>sopraturage.view.Forgot</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>Forgot</servlet-name>
+		<url-pattern>/forgot</url-pattern>
+	</servlet-mapping>
+	
 	<servlet>
 		<servlet-name>TestDatabase</servlet-name>
 		<servlet-class>sopraturage.models.TestDatabase</servlet-class>
 	</servlet>
+	
+	
 	<servlet-mapping>
 		<servlet-name>TestDatabase</servlet-name>
 		<url-pattern>/test</url-pattern>
 	</servlet-mapping>
+	
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.htm</welcome-file>
