--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,38 +5,45 @@
 	id="WebApp_ID" version="3.0">
 	<display-name>Sopraturage</display-name>
 	
+		<servlet>
+		<servlet-name>Connexion</servlet-name>
+		<servlet-class>sopraturage.view.ConnexionServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Connexion</servlet-name>
+		<url-pattern>/connexion</url-pattern>
+	</servlet-mapping>
+	
+	
 	
 	<servlet>
 		<servlet-name>Init</servlet-name>
 		<servlet-class>sopraturage.view.Init</servlet-class>
 	</servlet>
-	
-	
 	<servlet-mapping>
 		<servlet-name>Init</servlet-name>
 		<url-pattern>/init</url-pattern>
 	</servlet-mapping>
 	
+	
 	<servlet>
 		<servlet-name>Forgot</servlet-name>
 		<servlet-class>sopraturage.view.Forgot</servlet-class>
 	</servlet>
-	
 	<servlet-mapping>
 		<servlet-name>Forgot</servlet-name>
 		<url-pattern>/forgot</url-pattern>
 	</servlet-mapping>
-	
 	<servlet>
 		<servlet-name>TestDatabase</servlet-name>
 		<servlet-class>sopraturage.models.TestDatabase</servlet-class>
 	</servlet>
-	
-	
 	<servlet-mapping>
 		<servlet-name>TestDatabase</servlet-name>
 		<url-pattern>/test</url-pattern>
 	</servlet-mapping>
+	
+	
 	
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
