--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,92 +1,103 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
-  <display-name>Sopraturage</display-name>
-  <servlet>
-    <servlet-name>Connexion</servlet-name>
-    <servlet-class>sopraturage.servlets.ConnexionServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Connexion</servlet-name>
-    <url-pattern>/connexion</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>Admin</servlet-name>
-    <servlet-class>sopraturage.servlets.AdminServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Admin</servlet-name>
-    <url-pattern>/admin</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>Account</servlet-name>
-    <servlet-class>sopraturage.servlets.admin.AccountServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Account</servlet-name>
-    <url-pattern>/account</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>Workplace</servlet-name>
-    <servlet-class>sopraturage.servlets.admin.WorkplaceServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Workplace</servlet-name>
-    <url-pattern>/manage_workplaces</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>Create</servlet-name>
-    <servlet-class>sopraturage.servlets.InscriptionServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Create</servlet-name>
-    <url-pattern>/create</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>Forgot</servlet-name>
-    <servlet-class>sopraturage.servlets.ForgotServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Forgot</servlet-name>
-    <url-pattern>/forgot</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>TestDatabase</servlet-name>
-    <servlet-class>sopraturage.models.TestDatabase</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>TestDatabase</servlet-name>
-    <url-pattern>/test</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>Home</servlet-name>
-    <servlet-class>sopraturage.servlets.HomeServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Home</servlet-name>
-    <url-pattern>/home</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>Disco</servlet-name>
-    <servlet-class>sopraturage.servlets.DisconnectServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Disco</servlet-name>
-    <url-pattern>/disconnect</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>Modify</servlet-name>
-    <servlet-class>sopraturage.servlets.ModifyServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Modify</servlet-name>
-    <url-pattern>/modify</url-pattern>
-  </servlet-mapping>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-  </welcome-file-list>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://java.sun.com/xml/ns/javaee"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+	id="WebApp_ID" version="3.0">
+	<display-name>Sopraturage</display-name>
+	<servlet>
+		<servlet-name>Connexion</servlet-name>
+		<servlet-class>sopraturage.servlets.ConnexionServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Connexion</servlet-name>
+		<url-pattern>/connexion</url-pattern>
+	</servlet-mapping>
+
+
+
+
+
+
+
+
+	<servlet>
+		<servlet-name>Admin</servlet-name>
+		<servlet-class>sopraturage.servlets.AdminServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Admin</servlet-name>
+		<url-pattern>/admin</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>Account</servlet-name>
+		<servlet-class>sopraturage.servlets.admin.AccountServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Account</servlet-name>
+		<url-pattern>/account</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>Workplace</servlet-name>
+		<servlet-class>sopraturage.servlets.admin.WorkplaceServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Workplace</servlet-name>
+		<url-pattern>/manage_workplaces</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>Create</servlet-name>
+		<servlet-class>sopraturage.servlets.InscriptionServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Create</servlet-name>
+		<url-pattern>/create</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>Forgot</servlet-name>
+		<servlet-class>sopraturage.servlets.ForgotServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Forgot</servlet-name>
+		<url-pattern>/forgot</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>TestDatabase</servlet-name>
+		<servlet-class>sopraturage.models.TestDatabase</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>TestDatabase</servlet-name>
+		<url-pattern>/test</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>Home</servlet-name>
+		<servlet-class>sopraturage.servlets.HomeServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Home</servlet-name>
+		<url-pattern>/home</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>Disco</servlet-name>
+		<servlet-class>sopraturage.servlets.DisconnectServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Disco</servlet-name>
+		<url-pattern>/disconnect</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>Modify</servlet-name>
+		<servlet-class>sopraturage.servlets.ModifyServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Modify</servlet-name>
+		<url-pattern>/modify</url-pattern>
+	</servlet-mapping>
+	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
+		<welcome-file>index.htm</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>default.html</welcome-file>
+		<welcome-file>default.htm</welcome-file>
+		<welcome-file>default.jsp</welcome-file>
+	</welcome-file-list>
 </web-app>
